@@ -130,8 +130,7 @@ public final class SetterlessProperty
         // that's not good in common case. However, theoretically the case where
         // we get JSON null might be compatible. If so, implementation could be changed.
         if (toModify == null) {
-            ctxt.reportBadDefinition(getType(), String.format(
-                    "Problem deserializing 'setterless' property '%s': get method returned null",
+            ctxt.reportBadDefinition(getType(), "Problem deserializing 'setterless' property '%s': get method returned null".formatted(
                     getName()));
         }
         _valueDeserializer.deserialize(p, ctxt, toModify);
