@@ -1719,7 +1719,7 @@ inputDesc, _coercedTypeDesc(targetType));
         } else {
             return;
         }
-        String strDesc = str.isEmpty() ? "empty String (\"\")" : String.format("String \"%s\"", str);
+        String strDesc = str.isEmpty() ? "empty String (\"\")" : "String \"%s\"".formatted(str);
         _reportFailedNullCoerce(ctxt, enable, feat, strDesc);
     }
 
@@ -2028,7 +2028,7 @@ inputDesc, _coercedTypeDesc(targetType));
                     if (!vi.canCreateFromObjectWith()) {
                         final JavaType type = (prop == null) ? bd.getValueType() : prop.getType();
                         return ctxt.reportBadDefinition(type,
-                                String.format("Cannot create empty instance of %s, no default or Properties-based Creator", type));
+                                "Cannot create empty instance of %s, no default or Properties-based Creator".formatted(type));
                     }
                 }
             }
@@ -2122,10 +2122,9 @@ handledType().getName());
      */
     protected Object handleNestedArrayForSingle(JsonParser p, DeserializationContext ctxt) throws JacksonException
     {
-        String msg = String.format(
-"Cannot deserialize value of type %s out of %s token: nested Arrays not allowed with %s",
-            ClassUtil.nameOf(_valueClass), JsonToken.START_ARRAY,
-            "DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS");
+        String msg = "Cannot deserialize value of type %s out of %s token: nested Arrays not allowed with %s".formatted(
+                ClassUtil.nameOf(_valueClass), JsonToken.START_ARRAY,
+                "DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS");
 
         return ctxt.handleUnexpectedToken(getValueType(ctxt), p.currentToken(), p, msg);
     }
