@@ -47,7 +47,7 @@ public class UnrecognizedPropertyException
         }
         // 06-May-2020, tatu: 2.x said "Unrecognized field" but we call them "properties"
         //    everywhere else so...
-        String msg = String.format("Unrecognized property \"%s\" (class %s), not marked as ignorable",
+        String msg = "Unrecognized property \"%s\" (class %s), not marked as ignorable".formatted(
                 propertyName, ref.getName());
         UnrecognizedPropertyException e = new UnrecognizedPropertyException(p, msg,
                 p.currentLocation(), ref, propertyName, propertyIds);
