@@ -486,9 +486,8 @@ public class BeanSerializerFactory
 
             for (int i = 0, len = props.size() ;; ++i) {
                 if (i == len) {
-                    throw new IllegalArgumentException(String.format(
-"Invalid Object Id definition for %s: cannot find property with name %s",
-ClassUtil.getTypeDescription(beanDescRef.getType()), ClassUtil.name(propName)));
+                    throw new IllegalArgumentException("Invalid Object Id definition for %s: cannot find property with name %s".formatted(
+                            ClassUtil.getTypeDescription(beanDescRef.getType()), ClassUtil.name(propName)));
                 }
                 BeanPropertyWriter prop = props.get(i);
                 if (propName.equals(prop.getName())) {
