@@ -451,7 +451,7 @@ public class TypeFactory
                 break;
             }
             if (!rawBase.isAssignableFrom(subclass)) {
-                throw new IllegalArgumentException(String.format("Class %s not subtype of %s",
+                throw new IllegalArgumentException("Class %s not subtype of %s".formatted(
                         ClassUtil.nameOf(subclass), ClassUtil.getTypeDescription(baseType)
                 ));
             }
@@ -523,8 +523,8 @@ public class TypeFactory
         JavaType baseWithPlaceholders = tmpSub.findSuperType(baseType.getRawClass());
         if (baseWithPlaceholders == null) { // should be found but...
             throw new IllegalArgumentException(String.format(
-                    "Internal error: unable to locate supertype (%s) from resolved subtype %s", baseType.getRawClass().getName(),
-                    subclass.getName()));
+                    "Internal error: unable to locate supertype (%s) from resolved subtype %s",
+                    baseType.getRawClass().getName(), subclass.getName()));
         }
         // and traverse type hierarchies to both verify and to resolve placeholders
         String error = _resolveTypePlaceholders(baseType, baseWithPlaceholders);
@@ -589,8 +589,8 @@ public class TypeFactory
                         continue;
                     }
                 }
-                return String.format("Type parameter #%d/%d differs; cannot specialize %s with %s",
-                        (i+1), expCount, exp.toCanonical(), act.toCanonical());
+                return "Type parameter #%d/%d differs; cannot specialize %s with %s".formatted(
+                        (i + 1), expCount, exp.toCanonical(), act.toCanonical());
             }
         }
         return null;
@@ -638,12 +638,10 @@ public class TypeFactory
         if (superType == null) {
             // Most likely, caller did not verify sub/super-type relationship
             if (!superClass.isAssignableFrom(rawBase)) {
-                throw new IllegalArgumentException(String.format(
-                        "Class %s not a super-type of %s", superClass.getName(), baseType));
+                throw new IllegalArgumentException("Class %s not a super-type of %s".formatted(superClass.getName(), baseType));
             }
             // 01-Nov-2015, tatu: Should never happen, but ch
-            throw new IllegalArgumentException(String.format(
-                    "Internal error: class %s not included as super-type for %s",
+            throw new IllegalArgumentException("Internal error: class %s not included as super-type for %s".formatted(
                     superClass.getName(), baseType));
         }
         return superType;
@@ -1139,9 +1137,8 @@ public class TypeFactory
                 vt = typeParams.get(1);
                 break;
             default:
-                throw new IllegalArgumentException(String.format(
-"Strange Map type %s with %d type parameter%s (%s), cannot resolve",
-ClassUtil.nameOf(rawClass), pc, (pc == 1) ? "" : "s", bindings));
+                throw new IllegalArgumentException("Strange Map type %s with %d type parameter%s (%s), cannot resolve".formatted(
+                        ClassUtil.nameOf(rawClass), pc, (pc == 1) ? "" : "s", bindings));
             }
         }
         return MapType.construct(rawClass, bindings, superClass, superInterfaces, kt, vt);
@@ -1313,8 +1310,7 @@ ClassUtil.nameOf(rawClass), pc, (pc == 1) ? "" : "s", bindings));
         for (TypeModifier mod : _modifiers) {
             JavaType t = mod.modifyType(resultType, srcType, b, this);
             if (t == null) {
-                throw new IllegalStateException(String.format(
-                        "TypeModifier %s (of type %s) return null for type %s",
+                throw new IllegalStateException("TypeModifier %s (of type %s) return null for type %s".formatted(
                         mod, mod.getClass().getName(), resultType));
             }
             resultType = t;
